k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: http-echo-service
  namespace: sandbox
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
spec:
  ports:
  - port: 3000
  type: LoadBalancer
  selector:
    app: http-echo
